# OpenCV3.4.6

./: CMakeLists.txt  OpenCVConfig-version.cmake  OpenCVConfig.cmake  README.md  compile_cmd.txt  connected_components_trackbar.cpp  convex_hull.cpp  create_mask_img.cpp  distance_transform.cpp  dnn_classification.cpp  dnn_colorization.cpp  dnn_object_detection.cpp  dnn_pose_detection.cpp  draw_circle.cpp  draw_rectangle.cpp  draw_rectangle2.cpp  edges.cpp  edges_detect.cpp  face_detect.cpp  image_alignment.cpp  kalman_filter.cpp  kmeans_clustering.cpp  laplace_transformation_edges.cpp  load_img.cpp  mean_shift_tracking.cpp  meanshift_tracking_algorithm.cpp  non_photorealistic_line_drawing.cpp  pca.cpp  people_detect.cpp  polar_transforms.cpp  segment_objects.cpp  setup_vars_opencv3.cmd  smoothing.cpp  video_write.cpp  video_writer.cpp  warp_perspective.cpp
